--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -1,4 +1,4 @@
-noinst_LTLIBRARIES = libcodegenerator.la
+lib_LTLIBRARIES = libcodegenerator.la
 
 INCLUDES = -I../dialogs $(all_includes)
 
@@ -28,3 +28,10 @@ libcodegenerator_la_SOURCES = codegenfactory.cpp classifierinfo.cpp \
 				adawriter.cpp aswriter.cpp jswriter.cpp idlwriter.cpp perlwriter.cpp \
 				phpwriter.cpp pythonwriter.cpp sqlwriter.cpp
 libcodegenerator_la_COMPILE_FIRST = ../dialogs/codegenerationpolicybase.h
+
+install-data-local:
+	$(mkinstalldirs) $(DESTDIR)$(kde_datadir)/umbrello/codegenerators/
+	$(INSTALL_DATA) libcodegenerator.la $(DESTDIR)$(kde_datadir)/umbrello/codegenerators/libcodegenerator.la
+
+uninstall-local:
+	-rm -f $(DESTDIR)$(kde_datadir)/umbrello/codegenerators/libcodegenerator.la
