Ok, a patch to sort out several association/role problems which have cropped up with the association/data merge and new code generation systems. Primary changes involve fixes for loading old and new associations, making umlrole id really have parent object id, (instead of widget id, which is held separately by parent widget only now), making associations have more sensible constructors. This patch will bring older save files (from before Aug 31 or thereabouts) back from the grave to be loadable. Save files made between Sep 4 and Sep 12 are proabably not going to load..sorry.
svn path=/trunk/kdesdk/umbrello/; revision=250605

--- a/umbrello/umbrelloui.rc
+++ b/umbrello/umbrelloui.rc
@@ -49,5 +49,6 @@
 <ToolBar name="mainToolBar">
   <Action name="umbrello_zoom_in"/>
   <Action name="umbrello_zoom_out"/>
+  <Action name="Configure_UML" icon="configure.png"/>
 </ToolBar>
 </kpartgui>
