--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -4,7 +4,7 @@ MimeType=application/x-uml
 Icon=umbrellofile
 DefaultApp=umbrello
 Patterns=*.xmi;*.XMI;
-Comment=Umbrello UML Modeller file
+Comment=Umbrello UML Modeler file
 Comment[ca]=Modelador de fitxers UML Umbrello
 Comment[cy]=Ffeil Modelydd UML Umbrello
 Comment[da]=Umbrello UML Modeller fil
