Replace stepped zoom buttons with a smoother slider (slider code courtesy of KPlayer).  Not in bugs.kde.org but a requested feature.
svn path=/trunk/kdesdk/umbrello/; revision=252977

--- a/umbrello/umbrelloui.rc
+++ b/umbrello/umbrelloui.rc
@@ -47,8 +47,8 @@
   </Menu>
 </MenuBar>
 <ToolBar name="mainToolBar">
-  <Action name="umbrello_zoom_in"/>
-  <Action name="umbrello_zoom_out"/>
+  <Action name="popup_zoom"/>
+  <Action name="zoom100"/>
   <Action name="umbrello_configure"/>
 </ToolBar>
 </kpartgui>
