Remove reason for KDE_OPTIONS = nofinal
svn path=/trunk/kdesdk/umbrello/; revision=253490

--- a/umbrello/plugins/umlwidgets/Makefile.am
+++ b/umbrello/plugins/umlwidgets/Makefile.am
@@ -1,7 +1,4 @@
-#interfacewidget.cpp:41: error: redefinition of `int <unnamed>::hMargin'
-#classwidget.cpp:43: error: `int <unnamed>::hMargin' previously defined here
-# TODO: fix the problem
-KDE_OPTIONS = nofinal
+# KDE_OPTIONS = nofinal
 
 SUBDIRS = dialogs
 
