Upgrading XML element functionality. Java Ant doc gets propernodes. XMLschema dropped back to older, simpler xmlschema generator until after KDE 3.2 is released
svn path=/trunk/kdesdk/umbrello/; revision=254240

--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -22,11 +22,10 @@ libcodegenerator_la_SOURCES = codegenfactory.cpp classifierinfo.cpp \
 				cppheadercodeclassfielddeclarationblock.cpp \
 				cppcodegenerationpolicy.cpp cppcodegenerationpolicypage.cpp \
 				cppcodegenerationformbase.ui \
-				xmlschemacodegenerator.cpp xmlschemaclassifiercodedocument.cpp \
-				xmlschemacodeclassfield.cpp \
 				simplecodegenerator.cpp \
 				adawriter.cpp aswriter.cpp jswriter.cpp idlwriter.cpp perlwriter.cpp \
-				phpwriter.cpp pythonwriter.cpp sqlwriter.cpp
+				phpwriter.cpp pythonwriter.cpp sqlwriter.cpp xmlschemawriter.cpp \
+				xmlelementcodeblock.cpp xmlcodecomment.cpp
 libcodegenerator_la_COMPILE_FIRST = ../dialogs/codegenerationpolicybase.h
 
 install-data-local:
