--- a/umbrello/dialogs/Makefile.am
+++ b/umbrello/dialogs/Makefile.am
@@ -14,15 +14,12 @@ libdialogs_la_SOURCES = overwritedialogue.cpp codegenerationwizard.cpp codegener
                         statedialog.cpp settingsdlg.cpp selectopdlg.cpp parmpropdlg.cpp diagramprintpage.cpp \
                         classpropdlg.cpp classoptionspage.cpp classgenpage.cpp \
                         assocpropdlg.cpp assocpage.cpp diagrampropertiespage.ui assocrolepage.cpp assocgenpage.cpp \
-                        umltemplatedialog.cpp umbrellodialog.cpp \
+                        umltemplatedialog.cpp \
                         classpropertiesbase.ui classpropertiespage.cpp interfacepropertiesbase.ui interfacepropertiespage.cpp \
                         packagepropertiesbase.ui packagepropertiespage.cpp \
-                        classattributesbase.ui classattributespage.cpp classifieroperationsbase.ui classifieroperationspage.cpp \
-                        operationpropertiesbase.ui operationpropertiespage.cpp attributepropertiesbase.ui attributepropertiespage.cpp \
                         parameterpropertiesbase.ui parameterpropertiespage.cpp classifierlistpage.cpp\
-                        classtemplatesbase.ui classtemplatespage.cpp templatepropertiesbase.ui templatepropertiespage.cpp \
                         umlobjectassociationsbase.ui umlobjectassociationspage.cpp umlroledialog.cpp umlroleproperties.cpp \
-                        widgetcolorsbase.ui widgetcolorspage.cpp codevieweroptionspage.cpp
+                        codevieweroptionspage.cpp
 
 libdialogs_la_LDFLAGS = $(all_libraries) $(KDE_RPATH) -export-dynamic
 
