CVS_SILENT style guide fix
svn path=/trunk/kdesdk/umbrello/; revision=262515

--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -4,12 +4,4 @@ MimeType=application/x-uml
 Icon=umbrellofile
 DefaultApp=umbrello
 Patterns=*.xmi;*.XMI;
-Comment=Umbrello UML Modeller file
-Comment[ca]=Modelador de fitxers UML Umbrello
-Comment[cy]=Ffeil Modelydd UML Umbrello
-Comment[da]=Umbrello UML Modeller fil
-Comment[hu]=Umbrello UML fájl
-Comment[pt_BR]=Arquivo de Modelador UML Umbrello
-Comment[ru]=Файл моделера UML Umbrello
-Comment[sv]=Umbrello UML-modelleringsfil
-Comment[xx]=xxUmbrello UML Modeller filexx
+Comment=Umbrello UML Modeller File
