BIG code generation patch. Includes bug fixes for duplicating ops, C++ header/source generation, Java ANT and classifier code document generation, XML element generation. Some cleanup across classes to remove extraneous methods. Removed the CPPSourceClassDeclarationBlock Class from makefile, its not used
svn path=/trunk/kdesdk/umbrello/; revision=265100

--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -13,8 +13,7 @@ libcodegenerator_la_SOURCES = codegenfactory.cpp classifierinfo.cpp \
 				javacodegenerationformbase.ui \
 				cppcodegenerator.cpp cppcodedocumentation.cpp cppcodeclassfield.cpp \
 				cppcodecomment.cpp cppmakecodedocument.cpp \
-				cppsourcecodedocument.cpp cppsourceclassdeclarationblock.cpp\
-				cppsourcecodeoperation.cpp cppsourcecodeaccessormethod.cpp \
+				cppsourcecodedocument.cpp cppsourcecodeoperation.cpp cppsourcecodeaccessormethod.cpp \
 				cppsourcecodeclassfielddeclarationblock.cpp \
 				cppheadercodedocument.cpp cppheaderclassdeclarationblock.cpp \
 				cppheadercodeoperation.cpp cppheadercodeaccessormethod.cpp \
