in codegenerators/ are also some ui files with strings needed to be translated
svn path=/trunk/kdesdk/umbrello/; revision=266333

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -103,7 +103,7 @@ umbrello_LDFLAGS = $(all_libraries) $(KDE_RPATH) -export-dynamic
 
 messages: rc.cpp
 	$(PREPARETIPS) > tips.cpp
-	$(EXTRACTRC) *.rc dialogs/*.ui > ./rc.cpp
+	$(EXTRACTRC) *.rc codegenerators/*.ui dialogs/*.ui > ./rc.cpp
 	LIST=`find . -name \*.h -o -name \*.hh -o -name \*.H -o -name \*.hxx -o -name \*.hpp -o -name \*.cpp -o -name \*.cc -o -name \*.cxx -o -name \*.ecpp -o -name \*.C`; \
 	if test -n "$$LIST"; then \
 	 $(XGETTEXT) $$LIST -o $(podir)/umbrello.pot; \
