bug fix: correctly implement user ability to change string/vector class characteristics for C++ code generation
svn path=/trunk/kdesdk/umbrello/; revision=268475

--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -19,7 +19,7 @@ libcodegenerator_la_SOURCES = codegenfactory.cpp classifierinfo.cpp \
 				cppheadercodeoperation.cpp cppheadercodeaccessormethod.cpp \
 				cppheadercodeclassfielddeclarationblock.cpp \
 				cppcodegenerationpolicy.cpp cppcodegenerationpolicypage.cpp \
-				cppcodegenerationformbase.ui \
+				cppcodegenerationformbase.ui cppcodegenerationform.cpp \
 				simplecodegenerator.cpp \
 				adawriter.cpp aswriter.cpp jswriter.cpp idlwriter.cpp perlwriter.cpp \
 				phpwriter.cpp pythonwriter.cpp sqlwriter.cpp xmlschemawriter.cpp \
