Revert last commit which incorrectly changed the programs name.
This may mean the translations get marked as fuzzy.

svn path=/trunk/kdesdk/umbrello/; revision=274219

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -6,8 +6,7 @@ Icon=umbrello.png
 MiniIcon=umbrello.png
 DocPath=umbrello/index.html
 Terminal=false
-Name=Umbrello
-GenericName=UML Modeller
+Name=Umbrello UML Modeller
 Name[ca]=Modelador UML Umbrello
 Name[cs]=UML modelář Umbrello
 Name[cy]=Modelydd UML Umbrello
