Again Name<->GenericName separation after discussing it
svn path=/trunk/kdesdk/umbrello/; revision=274477

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -6,24 +6,7 @@ Icon=umbrello.png
 MiniIcon=umbrello.png
 DocPath=umbrello/index.html
 Terminal=false
-Name=Umbrello UML Modeller
-Name[ca]=Modelador UML Umbrello
-Name[cs]=UML modelář Umbrello
-Name[cy]=Modelydd UML Umbrello
-Name[da]=Umbrello UML Modellererer
-Name[de]=Umbrello UML-Modellierer
-Name[es]=Modelador de UML Umbrello
-Name[et]=Umbrello
-Name[fi]=Umbrello UML-mallintaja
-Name[fr]=Modeleur UML Umbrello
-Name[hu]=Umbrello UML-modellező
-Name[it]=Modellatore Umbrello UML
-Name[pt]=Modelador de UML Umbrello
-Name[pt_BR]=Modelador UML Umbrello
-Name[ru]=Umbrello
-Name[sk]=Umbrello modelár UML
-Name[sr]=Umbrello UML моделар
-Name[sv]=Umbrello UML-modellering
-Name[xx]=xxUmbrello UML Modellerxx
+Name=Umbrello
+GenericName=UML Modeller
 MimeType=application/x-uml
 Categories=Qt;KDE;Development
