CVS_SILENT made messages
svn path=/trunk/kdesdk/umbrello/; revision=279832

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -7,14 +7,29 @@ MiniIcon=umbrello
 DocPath=umbrello/index.html
 Terminal=false
 Name=Umbrello
+Name[da]=Umbrelo
+Name[hi]=अम्बरैलो
+Name[ta]=  அம்ரல்லோ
 GenericName=UML Modeller
 GenericName[cs]=UML modelář
 GenericName[cy]=Modelydd UML
+GenericName[da]=UML Modellererer
 GenericName[de]=UML-Modellierer
+GenericName[es]=Modelador de UML
 GenericName[et]=UML-i modelleerimise rakendus
-GenericName[hu]=UML modellező
+GenericName[fi]=UML-mallintaja
+GenericName[fr]=Modeleur UML
+GenericName[hi]=यूएमएल मॉडलर
+GenericName[hu]=UML-modellező
+GenericName[it]=Modellatore UML
 GenericName[nl]=UML-modeller
 GenericName[pt]=Modelador de UML
+GenericName[pt_BR]=Modelador UML
+GenericName[ru]=Средство UML моделирования
+GenericName[sk]=Modelár UML
+GenericName[sl]=Mofdelirnik UML
 GenericName[sr]=Umbrello UML моделар
+GenericName[sv]=UML-modellering
+GenericName[ta]=UML மோடெல்லார்
 MimeType=application/x-uml
 Categories=Qt;KDE;Development
