--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -5,3 +5,25 @@ Icon=umbrellofile
 DefaultApp=umbrello
 Patterns=*.xmi;*.XMI;
 Comment=Umbrello UML Modeller File
+Comment[ca]=Fitxer de model UML
+Comment[cs]=Soubor UML modeláře Umbrello
+Comment[cy]=Ffeil Modelydd UML Umbrello
+Comment[da]=Umbrello UML Modellerer fil
+Comment[de]=Umbrello-Datei
+Comment[es]=Archivo del modeladore UML Umbrello
+Comment[et]=Umbrello UML-fail
+Comment[fi]=Umbrello UML-mallinnustiedosto
+Comment[fr]=Fichier du modeleur UML Umbrello
+Comment[hi]=अम्बरैलो यूएमएल मॉडलर फाइल
+Comment[hu]=Umbrello UML-fájl
+Comment[it]=File del modellatore Umbrello UML
+Comment[nl]=Umbrello UML Modeller-bestand
+Comment[pt]=Ficheiro do Modelador de UML Umbrello
+Comment[pt_BR]=Arquivo de Modelador UML Umbrello
+Comment[ru]=Файл моделирования UML Umbrello
+Comment[sk]=Súbor pre Umbrello modelár UML
+Comment[sl]=Datoteka za modelirnik Umbrello UML
+Comment[sr]=фајл Umbrello UML моделара
+Comment[sv]=Umbrello UML-modelleringsfil
+Comment[ta]=  அம்ரல்லோ UML மோடெல்லார்
+Comment[xx]=xxUmbrello UML Modeller Filexx
