--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -11,6 +11,8 @@ Name[da]=Umbrelo
 Name[hi]=अम्बरैलो
 Name[ta]=  அம்ரல்லோ
 GenericName=UML Modeller
+GenericName[bs]=UML modeler
+GenericName[ca]=Modelador UML
 GenericName[cs]=UML modelář
 GenericName[cy]=Modelydd UML
 GenericName[da]=UML Modellererer
@@ -23,6 +25,7 @@ GenericName[hi]=यूएमएल मॉडलर
 GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
 GenericName[nl]=UML-modeller
+GenericName[pl]=Program do modelowania UML
 GenericName[pt]=Modelador de UML
 GenericName[pt_BR]=Modelador UML
 GenericName[ru]=Средство UML моделирования
@@ -31,5 +34,6 @@ GenericName[sl]=Mofdelirnik UML
 GenericName[sr]=Umbrello UML моделар
 GenericName[sv]=UML-modellering
 GenericName[ta]=UML மோடெல்லார்
+GenericName[zh_CN]=UML 建模工具
 MimeType=application/x-uml
 Categories=Qt;KDE;Development
