CVS_SILENT made messages
svn path=/branches/KDE_3_2_BRANCH/kdesdk/umbrello/; revision=292553

--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -15,9 +15,12 @@ Comment[es]=Archivo del modeladore UML Umbrello
 Comment[et]=Umbrello UML-fail
 Comment[fi]=Umbrello UML-mallinnustiedosto
 Comment[fr]=Fichier du modeleur UML Umbrello
+Comment[gl]=Ficheiro do Modelador de UML Umbrello
 Comment[hi]=अम्बरैलो यूएमएल मॉडलर फाइल
 Comment[hu]=Umbrello UML-fájl
+Comment[is]=Umbrello UML Modeller Skrá
 Comment[it]=File del modellatore Umbrello UML
+Comment[ja]=Umbrello UML モデラファイル
 Comment[nl]=Umbrello UML Modeller-bestand
 Comment[pl]=Plik modelera UML Umbrello
 Comment[pt]=Ficheiro do Modelador de UML Umbrello
@@ -26,6 +29,7 @@ Comment[ru]=Файл моделирования UML Umbrello
 Comment[sk]=Súbor pre Umbrello modelár UML
 Comment[sl]=Datoteka za modelirnik Umbrello UML
 Comment[sr]=фајл Umbrello UML моделара
+Comment[sr@Latn]=fajl Umbrello UML modelara
 Comment[sv]=Umbrello UML-modelleringsfil
 Comment[ta]=  அம்ரல்லோ UML மோடெல்லார்
 Comment[xx]=xxUmbrello UML Modeller Filexx
