--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -21,9 +21,11 @@ GenericName[es]=Modelador de UML
 GenericName[et]=UML-i modelleerimise rakendus
 GenericName[fi]=UML-mallintaja
 GenericName[fr]=Modeleur UML
+GenericName[gl]=Modelador UML
 GenericName[hi]=यूएमएल मॉडलर
 GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
+GenericName[ja]=UML モデラ
 GenericName[nl]=UML-modeller
 GenericName[pl]=Program do modelowania UML
 GenericName[pt]=Modelador de UML
@@ -32,6 +34,7 @@ GenericName[ru]=Средство UML моделирования
 GenericName[sk]=Modelár UML
 GenericName[sl]=Mofdelirnik UML
 GenericName[sr]=Umbrello UML моделар
+GenericName[sr@Latn]=Umbrello UML modelar
 GenericName[sv]=UML-modellering
 GenericName[ta]=UML மோடெல்லார்
 GenericName[zh_CN]=UML 建模工具
