--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -26,6 +26,7 @@ GenericName[hi]=यूएमएल मॉडलर
 GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
 GenericName[ja]=UML モデラ
+GenericName[nb]=UML-modelleringsprogram
 GenericName[nl]=UML-modeller
 GenericName[pl]=Program do modelowania UML
 GenericName[pt]=Modelador de UML
