--- a/umbrello/classparser/Makefile.am
+++ b/umbrello/classparser/Makefile.am
@@ -1,4 +1,5 @@
-INCLUDES = $(all_includes)
+INCLUDES = -I../dialogs $(all_includes)
+
 noinst_LTLIBRARIES = libclassparser.la
 libclassparser_la_SOURCES = ast.cpp driver.cpp errors.cpp lexer.cpp lookup.cpp parser.cpp tree_parser.cpp urlutil.cpp ast_utils.cpp cpptree2uml.cpp
 
