Srcdir != builddir fix, yes it will now include the same directory twice when using srcdir == builddir but that is not a problem.
svn path=/trunk/kdesdk/umbrello/; revision=304313

--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LTLIBRARIES = libcodegenerator.la
 
-INCLUDES = -I../dialogs $(all_includes)
+INCLUDES = -I../dialogs -I$(top_srcdir)/umbrello/umbrello/dialogs $(all_includes)
 
 libcodegenerator_la_LDFLAGS = $(all_libraries)
 libcodegenerator_la_METASOURCES = AUTO
