Grant wish #76209 (ability to show only public elements.)
svn path=/trunk/kdesdk/umbrello/; revision=304642

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -15,6 +15,7 @@ class.cpp \
 classifier.cpp \
 classifiercodedocument.cpp \
 classifierlistitem.cpp \
+classifierwidget.cpp \
 classimport.cpp \
 classwidget.cpp \
 codeaccessormethod.cpp \
