CVS_SILENT made messages
svn path=/branches/KDE_3_2_BRANCH/kdesdk/umbrello/; revision=306155

--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -16,11 +16,12 @@ Comment[et]=Umbrello UML-fail
 Comment[fi]=Umbrello UML-mallinnustiedosto
 Comment[fr]=Fichier du modeleur UML Umbrello
 Comment[gl]=Ficheiro do Modelador de UML Umbrello
-Comment[hi]=अम्बरैलो यूएमएल मॉडलर फाइल
+Comment[hi]=अम्बरैलो यूएमएल मॉडलर फ़ाइल
 Comment[hu]=Umbrello UML-fájl
 Comment[is]=Umbrello UML Modeller Skrá
 Comment[it]=File del modellatore Umbrello UML
 Comment[ja]=Umbrello UML モデラファイル
+Comment[nb]=Umbrello UML-modelleringsfil
 Comment[nl]=Umbrello UML Modeller-bestand
 Comment[pl]=Plik modelera UML Umbrello
 Comment[pt]=Ficheiro do Modelador de UML Umbrello
