New toolbar icons by "BARTKO, Zoltan" <bartko.zoltan@pobox.sk> touched up and aligned to grid by me
svn path=/trunk/kdesdk/umbrello/; revision=308423

--- a/umbrello/pics/Makefile.am
+++ b/umbrello/pics/Makefile.am
@@ -1,16 +1,15 @@
 picsdir = $(kde_datadir)/umbrello/pics
 
-pics_DATA = actor.xpm \
-aggregation.xpm \
-anchor.xpm \
+pics_DATA = actor.png \
+aggregation.png \
+anchor.png \
 arrow.png \
-association.xpm \
+association.png \
 broom.xpm \
-case.xpm \
-component.xpm \
-composition.xpm \
+component.png \
+composition.png \
 constraint.xpm \
-containment.xpm \
+containment.png \
 CVglobal_meth.png \
 CVglobal_var.png \
 CVnamespace.png \
@@ -27,42 +26,43 @@ CVpublic_signal.png \
 CVpublic_slot.png \
 CVpublic_var.png \
 CVstruct.png \
-dependency.xpm \
-end_state.xpm \
-generalization.xpm \
+dependency.png \
+end_state.png \
+generalisation.png \
 hline.xpm \
 implements.xpm \
-initial_state.xpm \
-interface.xpm \
-datatype.xpm \
-enum.xpm \
+initial_state.png \
+interface.png \
+datatype.png \
+enum.png \
 largepackage.xpm \
 lifeline.xpm \
 line.xpm \
-message-synchronous.xpm \
-message-asynchronous.xpm \
-note.xpm \
-object.xpm \
+message-synchronous.png \
+message-asynchronous.png \
+note.png \
+object.png \
 output_win.xpm \
 realizes.xpm \
 smallpackage.xpm \
 snapshot.xpm \
 startlogo.png \
-text.xpm \
+text.png \
 umlclass_template.xpm \
-umlclass.xpm \
-uniassoc.xpm \
+class.png \
+uniassociation.png \
+usecase.png \
 usecaserelation.xpm \
 vline.xpm \
-branch.xpm \
-fork.xpm \
-package.xpm \
-artifact.xpm \
-box.xpm \
+branch.png \
+fork.png \
+package.png \
+artifact.png \
+box.png \
 public.png \
 protected.png \
 private.png \
-node.xpm \
+node.png \
 cursor-actor.xpm \
 cursor-case.xpm \
 cursor-initial-state.xpm \
