Mouse cursors to match toolbar icons
svn path=/trunk/kdesdk/umbrello/; revision=308432

--- a/umbrello/pics/Makefile.am
+++ b/umbrello/pics/Makefile.am
@@ -63,32 +63,32 @@ public.png \
 protected.png \
 private.png \
 node.png \
-cursor-actor.xpm \
-cursor-case.xpm \
-cursor-initial-state.xpm \
-cursor-package.xpm \
-cursor-aggregation.xpm \
-cursor-component.xpm \
-cursor-containment.xpm \
-cursor-interface.xpm \
-cursor-datatype.xpm \
-cursor-enum.xpm \
-cursor-text.xpm \
-cursor-anchor.xpm \
-cursor-composition.xpm \
-cursor-message-asynchronous.xpm \
-cursor-umlclass.xpm \
-cursor-artifact.xpm \
-cursor-dependency.xpm \
-cursor-message-synchronous.xpm \
-cursor-uniassoc.xpm \
-cursor-association.xpm \
-cursor-end-state.xpm \
-cursor-node.xpm \
-cursor-box.xpm \
-cursor-fork.xpm \
-cursor-note.xpm \
-cursor-branch.xpm \
-cursor-generalisation.xpm \
-cursor-object.xpm
+cursor-actor.png \
+cursor-usecase.png \
+cursor-initial-state.png \
+cursor-package.png \
+cursor-aggregation.png \
+cursor-component.png \
+cursor-containment.png \
+cursor-interface.png \
+cursor-datatype.png \
+cursor-enum.png \
+cursor-text.png \
+cursor-anchor.png \
+cursor-composition.png \
+cursor-message-asynchronous.png \
+cursor-class.png \
+cursor-artifact.png \
+cursor-dependency.png \
+cursor-message-synchronous.png \
+cursor-uniassociation.png \
+cursor-association.png \
+cursor-end-state.png \
+cursor-node.png \
+cursor-box.png \
+cursor-fork.png \
+cursor-note.png \
+cursor-branch.png \
+cursor-generalisation.png \
+cursor-object.png
 
