Add icons for diagram types by "BARTKO, Zoltan" <bartko.zoltan_AT_pobox.sk> Aligned to grid by me
svn path=/trunk/kdesdk/umbrello/; revision=308438

--- a/umbrello/pics/Makefile.am
+++ b/umbrello/pics/Makefile.am
@@ -92,3 +92,12 @@ cursor-branch.png \
 cursor-generalisation.png \
 cursor-object.png
 
+KDE_ICON = cr16-action-umbrello_diagram_activity.png \
+cr16-action-umbrello_diagram_class.png \
+cr16-action-umbrello_diagram_collaboration.png \
+cr16-action-umbrello_diagram_component.png \
+cr16-action-umbrello_diagram_deployment.png \
+cr16-action-umbrello_diagram_sequence.png \
+cr16-action-umbrello_diagram_state.png \
+cr16-action-umbrello_diagram_usecase.png
+
