Update icons in the listview
svn path=/trunk/kdesdk/umbrello/; revision=308441

--- a/umbrello/pics/Makefile.am
+++ b/umbrello/pics/Makefile.am
@@ -47,6 +47,7 @@ realizes.xpm \
 smallpackage.xpm \
 snapshot.xpm \
 startlogo.png \
+template.png \
 text.png \
 umlclass_template.xpm \
 class.png \
